--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "apollo-server": "^3.12.0",
+    "argon2": "^0.30.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
